# scenes

./: README.md  gen.py
01_simple_scenes/: 01_cornell_mitsuba_lambert.xml  01_cornell_pbrt_lambert.pbrt  02_cornell_mitsuba_mirror.xml  02_cornell_pbrt_mirror.pbrt  03_sphere_hydra_pbr_lite_spec.xml  03_sphere_mitsuba_pbr_lite.xml  03_sphere_pbrt_lambert.pbrt  03_sphere_pbrt_pbr_lite.pbrt  05_cornell_hydra_plastic.xml  05_cornell_mitsuba_plastic.xml  05_sphere_hydra_plastic.xml  05_sphere_mitsuba_plastic.xml  05_sphere_mitsuba_plastic_implicit.xml  10_sphere_hydra_gltf2lite.xml  bunny_cornell.xml  bunny_cornell2.xml  bunny_cornell_obj.xml  imgdiff.py  instanced_objects.xml  instanced_objects2.xml  mi_cornell.xml  mi_plane.xml  mirender.py  pbrt_cornell.pbrt  run_hydra2.sh  sphere_plane.pbrt  sphere_plane.xml  sphere_plane_obj.xml
01_simple_scenes/old/: 01_sphere_hydra_lambert.xml  02_sphere_mitsuba_lambert.xml  03_sphere_pbrt_lambert.pbrt  04_cornell_hydra_lambert.xml  06_cornell_pbrt_lambert.pbrt  07_sphere_hydra_ggx_metal.xml  08_sphere_mitsuba_ggx_metal.xml  09_sphere_pbrt_ggx_metal.pbrt  10_sphere_hydra_gltf2lite.xml  11_sphere_mitsuba_gltf2lite.xml  12_sphere_pbrt_gltf2lite.pbrt  13_cornell_hydra_gltf2lite.xml  14_cornell_mitsuba_gltf2.xml  15_cornell_pbrt_gltf2lite.pbrt
aa_images/: cut.py  cut_up.py  downsample.py
sample_loader_app/: .gitignore  BSP_based_sampler.cpp  BSP_based_sampler.h  CMakeLists.txt  CamHostPluginAPI.h  CamHostRaysPinHoleBSPImage.cpp  HydraRngUtils.cpp  HydraRngUtils.h  README.md  RT_sampler.h  Stupid_sampler.h  SubPixelImageBSP.cpp  SubPixelImageBSP.h  SubPixelImageNaive.h  debug_pixel.ipynb  main.cpp  run1.sh  run_bunny.sh  svm.cpp  svm.h
sample_loader_app/loader/: cmesh.cpp  hydraxml.cpp  hydraxml.h
sample_loader_app/render/: CrossRT.h  EmbreeRT.cpp  image_save.cpp  image_save.h  raytracing.cpp  raytracing.h
